# L2

./: .gitignore  .merlin  .ocamlformat  .travis.yml  CHANGES.md  README.md  Vagrantfile  _oasis  _tags  default_cost.json  docs  dune  dune-project  index.html  l2.opam  l2.opam.locked  myocamlbuild.ml  opam  provision.sh  setup.ml
bench/: Dedup.json  add.json  appendt.json  concat.json  count_leaves.json  dupli.json  evens.json  flatten.json  height.json  incrs.json  incrt.json  intersect.json  join.json  largest_n.json  leaves.json  max.json  membert.json  multlast.json  selectnodes.json  shiftr.json  sum.json  sumnodes.json
benchmarks/: Reverse.json  cprod.json  droplast.json  dropmax.json  insertn.json  last.json  length.json  member.json  multfirst.json  prependt.json  replacet.json  shiftl.json  sumt.json  sumtrees.json
components/: list.ml  stdlib.ml
l2/: index.html
l2/L2/: index.html
l2/L2__Ast/: index.html
l2/L2__Collections/: index.html
l2/L2__Combinat/: index.html
l2/L2__Config/: index.html
l2/L2__Counter/: index.html
l2/L2__Ctx/: index.html
l2/L2__Eval/: index.html
l2/L2__Example/: index.html
l2/L2__Example_deduction/: index.html
l2/L2__Expr/: index.html
l2/L2__ExprValue/: index.html
l2/L2__Fast_example_deduction/: index.html
l2/L2__Fresh/: index.html
l2/L2__Higher_order_deduction/: index.html
l2/L2__Hypothesis/: index.html
l2/L2__Id/: index.html
l2/L2__Infer/: index.html
l2/L2__Input_deduction/: index.html
l2/L2__Lexer_ml/: index.html
l2/L2__Lexer_sexp/: index.html
l2/L2__Library/: index.html
l2/L2__Mutctx/: index.html
l2/L2__Name/: index.html
l2/L2__Parser_ml/: index.html
l2/L2__Parser_sexp/: index.html
l2/L2__Random_deduction/: index.html
l2/L2__Recursive_spec_deduction/: index.html
l2/L2__Rewrite/: index.html
l2/L2__Sstream/: index.html
l2/L2__Status/: index.html
l2/L2__Structure/: index.html
l2/L2__Synthesis_common/: index.html
l2/L2__Testcase/: index.html
l2/L2__Timer/: index.html
l2/L2__Tree/: index.html
l2/L2__Unify/: index.html
l2/L2__Util/: index.html
l2/L2__V1_engine/: index.html
l2/L2__V1_solver_engine/: index.html
lib/: ast.ml  automaton.ml  collections.ml  combinat.ml  combinat.mli  config.ml  config.mli  counter.ml  ctx.ml  dune  eval.ml  eval.mli  example.ml  example.mli  example_deduction.ml  example_deduction.mli  expr.ml  exprValue.ml  exprValue.mli  fast_example_deduction.ml  fresh.ml  generate_functions.ml  higher_order_deduction.ml  hypothesis.ml  hypothesis.mli  id.ml  infer.ml  infer.mli  input_deduction.ml  lexer_sexp.mll  library.ml  library.mli  mutctx.ml  name.ml  parser_ml.mly  parser_sexp.mly  random_deduction.ml  recursive_spec_deduction.ml  rewrite.ml  sstream.ml  (+20 more)
paper/: algo.tex
paramils/: crossvalidate.py  instances.txt  l2_wrapper.py  params.txt  scenario.txt
pldi2015/: abstract.tex  conc.tex  eval.tex  examples.tex  intro.tex  llncs.dem  newalg.sty  pldi.bib  pldi.tex  problem.tex  relwork.tex  sigplanconf.cls  synthesis.tex
pldi2015 student research/: pldisr.bib  pldisr.tex  results.csv
report/: report.org
scripts/: example_gen.py
specs/: Dedup.json  Reverse.json  append.json  concat.json  count_nodes.json  droplast.json  dropmins.json  flattenl.json  join.json  length.json  max.json  maxt.json  reverse.l2  searchnodes.json  sum.json  sums.json  tconcat.json
src/: .merlin  Makefile  _tags  ast.ml  benchmark.py  bolt.conf  build.sh  collections.ml  collections_tests.ml  config.ml  config.mli  constraint.ml  deduction.ml  deduction.mli  eval.ml  example.ml  example_gen.py  expr.ml  generalize.ml  hypothesis.ml  hypothesis.mli  improved_search.ml  improved_search.mli  improved_search_tests.ml  infer.ml  infer.mli  interactive.ml  jbuild  l2.ml  lexer.mll  parser.mly  rewrite.ml  search.ml  sstream.ml  structure.ml  symbSolver.ml  symbolic_execution.ml  testcase.ml  testcase.mli  tests.ml  (+8 more)
test/: collections_tests.ml  dune  hypothesis_tests.ml  sexp_parser_tests.ml  tests.ml  tests_common.ml  type_tests.ml  unify_tests.ml  v2_engine_tests.ml
unify/: unify.ml
writing/: writeup.tex
(+1379 files in other folders)
