opam-version: "1.2"
name:         "l2"
version:      "2.0"
maintainer:   "Jack Feser <jack.feser@gmail.com>"
authors:      "Jack Feser <jack.feser@gmail.com>"
homepage:     "https://github.com/jfeser/L2"
bug-reports:  "https://github.com/jfeser/L2/issues"
license:      "Apache2.0"
dev-repo:     "https://github.com/jfeser/L2.git"
build: [
  ["jbuilder" "build" "@install"]
]
install: ["jbuilder" "install"]
remove: ["jbuilder" "uninstall"]
depends: [
  "ocamlfind"      {build}
  "menhir"         {build}
  "ounit"          {>= "2"}
  "core"           {>= "0.9"}
  "core_extended"  {>= "0.9"}
  "ppx_jane"       {>= "0.9"}
  "yojson"         {>= "1.4"}
  "hashcons"       {>= "1.2"}
]
