opam-version: "1.2"
name:         "l2"
version:      "2.0"
maintainer:   "Jack Feser <jack.feser@gmail.com>"
authors:      "Jack Feser <jack.feser@gmail.com>"
homepage:     "https://github.com/jfeser/L2"
bug-reports:  "https://github.com/jfeser/L2/issues"
doc: "https://jfeser.github.io/L2/"
license:      "Apache2.0"
dev-repo:     "https://github.com/jfeser/L2.git"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune"           {build & >= "1.1"}
  "menhir"         {build}
  "ounit"          {>= "2" & < "2.1"}
  "core"           {>= "v0.11.3" & < "v0.12"}
  "core_extended"  {>= "v0.11.0" & < "v0.12"}
  "ppx_jane"       {>= "v0.11.0" & < "v0.12"}
  "yojson"         {>= "1.5" & < "2"}
  "hashcons"       {>= "1.3" & < "2"}
]
