opam-version: "1.2"
name:         "l2"
synopsis:     "Enumerative program synthesizer"
version:      "2.0"
maintainer:   "Jack Feser <jack.feser@gmail.com>"
authors:      "Jack Feser <jack.feser@gmail.com>"
homepage:     "https://github.com/jfeser/L2"
bug-reports:  "https://github.com/jfeser/L2/issues"
doc: "https://jfeser.github.io/L2/"
license:      "Apache2.0"
dev-repo:     "https://github.com/jfeser/L2.git"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "ocaml"          {>= "4.08"}
  "dune"           {build & >= "1.11"}
  "menhir"         {build & >= "20190924"}
  "ounit"          {>= "2.2"}
  "core"           {>= "v0.12"}
  "yojson"         {>= "1.7"}
  "hashcons"       {>= "1.3"}
]
