(ocamllex lexer_sexp lexer_ml)

(menhir (modules parser_sexp parser_ml))

(library
 (name l2)
 (public_name l2)
 (libraries core yojson hashcons)
 (preprocess (pps ppx_bin_prot ppx_compare ppx_fields_conv ppx_hash ppx_let ppx_sexp_conv))
 (modules (:standard \ Symbolic_execution Automaton Generate_functions)))
